--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1><i><strong>HOBBYS</strong></i></h1>
+        <h1><i>HOBBYS</i></h1>
         <p class="parrafo1"><strong>Te voy describir brevemente las cosas que más disfruto hacer en mi vida.</strong></p>
     </header>
     <ol type="1">
